--- a/peermountain_core/src/main/res/values/colors.xml
+++ b/peermountain_core/src/main/res/values/colors.xml
@@ -9,7 +9,14 @@
     <color name="pm_share_text">#FFFFFF</color><!--100%-->
     <color name="pm_share_et_hint">#80FFFFFF</color><!--50%-->
     <color name="pm_share_text_accent">#49C5DE</color>
+
     <color name="pm_odk_text">#DE000000</color>
     <color name="pm_odk_text_hint">#8A000000</color>
     <color name="pm_odk_text_error">#FFFF003E</color>
+
+    <color name="pm_slider_bkg">#FF49C5DE</color>
+    <color name="pm_odk_active">#FF126B82</color>
+    <color name="pm_odk_slider_thumb_border">#FFFFFF</color>
+    <color name="pm_odk_checkbox_default">#FF49C5DE</color>
+    <color name="pm_odk_checkbox_active">#FF126B82</color>
 </resources>
