--- a/peermountain_core/src/main/res/layout/fragment_pm_xform.xml
+++ b/peermountain_core/src/main/res/layout/fragment_pm_xform.xml
@@ -23,7 +23,8 @@
         android:id="@+id/tvText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_marginBottom="@dimen/pm_margin_small"
         android:textColor="@android:color/holo_red_dark"/>
 
     <ViewFlipper
