--- a/peermountain_core/src/main/res/drawable/pm_rounded_btn.xml
+++ b/peermountain_core/src/main/res/drawable/pm_rounded_btn.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-    <solid android:color="@color/colorAccent"/>
+    android:shape="rectangle">
+    <size
+        android:width="40dp"
+        android:height="20dp"/>
+    <stroke
+        android:width="1dp"
+        android:color="@color/colorAccent"/>
+    <corners android:radius="6dp"/>
 </shape>
