--- a/peermountain_core/src/main/res/layout/pm_image_widget.xml
+++ b/peermountain_core/src/main/res/layout/pm_image_widget.xml
@@ -16,7 +16,7 @@
         android:background="@drawable/pm_rounded_btn"
         android:textColor="@color/pm_odk_text"
         android:textSize="@dimen/pm_text_normal"
-        android:text="@string/pick_file_btn"/>
+        android:text="@string/pm_pick_file_btn"/>
 
     <ImageView
         android:id="@+id/pmIvSelectedImage"
