--- a/peermountain_core/src/main/res/layout/fragment_pm_xform.xml
+++ b/peermountain_core/src/main/res/layout/fragment_pm_xform.xml
@@ -34,4 +34,9 @@
         android:layout_marginTop="40dp">
     </ViewFlipper>
 
+    <!--<ProgressBar-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:id="@+id/progressViewsLoading"/>-->
 </FrameLayout>
