--- a/peermountain_core/src/main/res/layout/fragment_pm_xform.xml
+++ b/peermountain_core/src/main/res/layout/fragment_pm_xform.xml
@@ -27,16 +27,22 @@
         android:layout_marginBottom="@dimen/pm_margin_small"
         android:textColor="@android:color/holo_red_dark"/>
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvQuestions"
+        android:layout_width="match_parent"
+        android:layout_height="130dp"
+        android:layout_marginTop="40dp"/>
+
     <ViewFlipper
         android:id="@+id/pmVfXForm"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="40dp">
+        android:layout_marginTop="170dp">
     </ViewFlipper>
 
     <!--<ProgressBar-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="center"-->
-        <!--android:id="@+id/progressViewsLoading"/>-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="center"-->
+    <!--android:id="@+id/progressViewsLoading"/>-->
 </FrameLayout>
