fix to swipe with big image

--- a/peermountain_core/src/main/res/layout/fragment_pm_xform.xml
+++ b/peermountain_core/src/main/res/layout/fragment_pm_xform.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/pm_bkg"
     tools:context="com.peermountain.core.odk.XFormFragment">
 
     <TextView
@@ -37,7 +38,10 @@
         android:id="@+id/pmVfXForm"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="170dp">
+        android:layout_marginTop="178dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:background="@drawable/pm_share_card_white">
     </ViewFlipper>
 
     <!--<ProgressBar-->
