--- a/peermountain_core/src/main/res/layout/pm_image_widget.xml
+++ b/peermountain_core/src/main/res/layout/pm_image_widget.xml
@@ -32,7 +32,7 @@
     <ImageView
         android:id="@+id/pmIvSelectedImage"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="@dimen/pm_odk_image_document_height"
         android:layout_marginTop="@dimen/pm_margin_small"/>
 
 </LinearLayout>
