--- a/peermountain_core/src/main/res/values/dimens.xml
+++ b/peermountain_core/src/main/res/values/dimens.xml
@@ -18,4 +18,5 @@
     <dimen name="pm_odk_slider_weight">12dp</dimen>
     <dimen name="pm_odk_thumb_border">8dp</dimen>
     <dimen name="pm_odk_image_document_height">200dp</dimen>
+    <dimen name="odk_doc_list_image_size">50dp</dimen>
 </resources>
