--- a/peermountain_sdk/src/main/res/values-hdpi/dimens.xml
+++ b/peermountain_sdk/src/main/res/values-hdpi/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="pm_margin_big">20dp</dimen>
     <dimen name="margin_first_card">32dp</dimen>
     <dimen name="pm_intro_security_icon_size">110dp</dimen>
+    <dimen name="pm_file_image_width">260dp</dimen>
 </resources>
