--- a/peermountain_sdk/src/main/res/layout/pm_fragment_show_scanned_id.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_fragment_show_scanned_id.xml
@@ -75,7 +75,8 @@
 
             <TextView
                 android:id="@+id/tvPmDob"
-                style="@style/pm_id_tv"/>
+                style="@style/pm_id_tv"
+                android:layout_marginBottom="70dp"/>
 
 
             <ImageView
