added torch to CameraActivity when scanning ID
fix to reload avatar

--- a/peermountain_core/src/main/res/layout/pm_activity_camera_id.xml
+++ b/peermountain_core/src/main/res/layout/pm_activity_camera_id.xml
@@ -63,7 +63,18 @@
         android:layout_margin="@dimen/pm_margin_normal"
         android:drawableLeft="@drawable/ic_check_24dp"
         android:drawablePadding="@dimen/pm_margin_small"
-        android:text="Done"
+        android:text="@string/pm_btn_done_scanning"
+        android:visibility="gone"
+        tools:visibility="visible"/>
+
+    <Button
+        android:id="@+id/btnFlash"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|left"
+        android:layout_margin="@dimen/pm_margin_normal"
+        android:drawablePadding="@dimen/pm_margin_small"
+        android:text="@string/pm_btn_flash"
         android:visibility="gone"
         tools:visibility="visible"/>
 
