--- a/peermountain_sdk/src/main/res/layout/pm_fragment_show_scanned_id.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_fragment_show_scanned_id.xml
@@ -30,7 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/holo_red_dark"
-                android:visibility="visible"/>
+                android:visibility="gone"/>
             <TextView
                 style="@style/pm_id_tv"
                 android:text="@string/pm_id_scan_lbl"
