--- a/peermountain_core/src/main/res/values/styles.xml
+++ b/peermountain_core/src/main/res/values/styles.xml
@@ -51,4 +51,14 @@
     <style name="PmCustomCalendarTextAppearanceWeek" parent="TextAppearance.MaterialCalendarWidget.Date">
         <item name="android:textColor">@color/pm_calendar_week</item>
     </style>
+
+    <style name="camera_extra_buttons">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">bottom|right</item>
+        <item name="android:padding">@dimen/pm_margin_small</item>
+        <item name="android:layout_margin">@dimen/pm_margin_normal</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:textColor">@color/pm_share_text</item>
+    </style>
 </resources>
