--- a/peermountain_core/src/main/res/layout/pm_date_widget.xml
+++ b/peermountain_core/src/main/res/layout/pm_date_widget.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
-             android:layout_height="match_parent">
+             android:layout_height="wrap_content">
     <com.prolificinteractive.materialcalendarview.MaterialCalendarView
         android:id="@+id/calendarView"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="350dp"
         android:layout_margin="0dp"
+        android:layout_gravity="center"
         app:mcv_dateTextAppearance="@style/PmCustomCalendarTextAppearance"
         app:mcv_headerTextAppearance="@style/PmCustomCalendarTextAppearanceMonth"
         app:mcv_weekDayTextAppearance="@style/PmCustomCalendarTextAppearanceWeek"
