--- a/peermountain_core/src/main/res/values/styles.xml
+++ b/peermountain_core/src/main/res/values/styles.xml
@@ -58,7 +58,7 @@
         <item name="android:layout_gravity">bottom|right</item>
         <item name="android:padding">@dimen/pm_margin_small</item>
         <item name="android:layout_margin">@dimen/pm_margin_normal</item>
-        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:background">@drawable/pm_btn_primary_selector</item>
         <item name="android:textColor">@color/pm_share_text</item>
     </style>
 </resources>
