--- a/peermountain_core/src/main/res/layout/pm_activity_camera_id.xml
+++ b/peermountain_core/src/main/res/layout/pm_activity_camera_id.xml
@@ -31,7 +31,7 @@
         app:cameraAudio="off"
         app:cameraCropOutput="true"
         app:cameraFacing="back"
-        app:cameraFlash="auto"
+        app:cameraFlash="off"
         app:cameraGestureLongTap="focusWithMarker"
         app:cameraGesturePinch="zoom"
         app:cameraGestureScrollHorizontal="exposureCorrection"
