--- a/pm_scan_selfie_sdk/src/main/res/layout/pm_activity_camera.xml
+++ b/pm_scan_selfie_sdk/src/main/res/layout/pm_activity_camera.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/pm_bkg"
-    tools:context="com.peermountain.core.camera.CameraActivity">
+    tools:context=".CameraLiveSelfieActivity">
 
     <TextView
         android:id="@+id/tvMsg"
@@ -23,7 +23,6 @@
     <!-- Camera -->
     <com.otaliastudios.cameraview.CameraView
         android:id="@+id/camera"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="@dimen/pm_camera_size"
         android:layout_height="@dimen/pm_camera_size"
         android:layout_gravity="center"
@@ -49,7 +48,7 @@
         android:id="@+id/btnRecord"
         style="@style/camera_button"
         android:background="@drawable/pm_circle_btn"
-        android:padding="12dp"
+        android:padding="@dimen/pm_margin_small"
         android:visibility="gone"
         app:srcCompat="@drawable/pm_ic_photo"
         tools:visibility="visible"/>
@@ -62,7 +61,7 @@
         android:layout_margin="@dimen/pm_margin_normal"
         android:drawableLeft="@drawable/pm_ic_check_dark_24dp"
         android:drawablePadding="@dimen/pm_margin_small"
-        android:text="Done"
+        android:text="@string/pm_live_selfie_btn_done"
         android:visibility="gone"
         tools:visibility="visible"/>
 
